# road-tokeniser

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md
notebooks/: 01_data_audit.ipynb  04_pretrain_diagnostics.ipynb
reports/: cambridge_eval.json  cambridge_eval.md  cambridge_vs_wellington.md  wellington_eval.json  wellington_eval.md
road_tokeniser/: __init__.py  fetch_data.py  safe_system.py  tokenise.py
road_tokeniser/model/: __init__.py  dataset.py  embed.py  encoder.py  eval.py  pretrain.py
rules/: safe_system.yml
tests/: test_safe_system.py  test_tokenise_helpers.py
webapp/: .vercelignore  index.html  serve.py  vercel.json
