[project]
name = "road-tokeniser"
version = "0.1.0"
description = "Road-segment tokenisation + Safe System speed-limit misalignment detection. Entry for the AI for Safer Roads Innovation Challenge (ADB × World Bank × AI for Good × ITU)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "James Ball" }]

dependencies = [
    "osmnx>=2.0,<3.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "requests>=2.31",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "jupyterlab>=4",
    "matplotlib>=3.8",
]
explorer = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
ml = [
    "torch>=2.3",
    "torch-geometric>=2.5",
    "tensorboard>=2.16",
]

[project.scripts]
rt-fetch = "road_tokeniser.fetch_data:main"
rt-tokenise = "road_tokeniser.tokenise:main"
rt-pretrain = "road_tokeniser.model.pretrain:main"
rt-embed = "road_tokeniser.model.embed:main"
rt-eval = "road_tokeniser.model.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["road_tokeniser"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
